src/main.css
html, body, div {
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-o-user-select: none;
	user-select: none;
}
div {
	position: absolute;
}
#splash-screen {
	top: 0;
	left: 0;
	width: 480px;
	height: 762px;
	background-image: url('splash_screen.png');
	background-repeat: no-repeat;
	z-index: 2;
}
#splash-screen-loading {
	top: 280px;
	left: 190px;
	width: 100px;
	height: 100px;
	background-image: url('loading.gif');
	background-repeat: no-repeat;
	z-index: 3;
}
#main {
	top: 0;
	left: 0;
	width: 480px;
	height: 762px;
	/* background-color: #000;*/
	background-image: url('anymote_bg.png');
	background-repeat: no-repeat;
	/* margin-top: -38px; */
}
#on-off {
	left: 20px;
	top: 20px;
	width: 94px;
	height: 94px;
	background-image: url('anymote_power_button.png');
}
#config {
	left: 160px;
	top: 20px;
	width: 142px;
	height: 39px;
	background-image: url('configure_button.png');
}
#device {
	right: 20px;
	top: 20px;
	width: 159px;
	height: 89px;
	background-image: url('device_button.png');
}
#channel-up {
	left: 30px;
	top: 140px;
	width: 115px;
	height: 122px;
	background-image: url('ch_plus_button.png');
}
#channel-down {
	left: 30px;
	top: 260px;
	width: 115px;
	height: 122px;
	background-image: url('ch_minus_button.png');
}
#volume-up {
	right: 30px;
	top: 140px;
	width: 115px;
	height: 122px;
	background-image: url('vol_plus_button.png');
}
#volume-down {
	right: 30px;
	top: 260px;
	width: 115px;
	height: 122px;
	background-image: url('vol_minus_button.png');
}
#ok {
	/* HACK - The OK button needs to be broken down into its 5 elements, and then the up, down, left and right can be re-enabled
	left: 190px;
	top: 180px;
	*/
	left: 150px;
	top: 140px;
	width: 181px;
	height: 181px;
	background-image: url('nav_button.png');
}
/*
#up {
	left: 190px;
	top: 125px;
	width: 100px;
	height: 45px;
	background-image: url('');
}
#down {
	left: 190px;
	top: 290px;
	width: 100px;
	height: 45px;
	background-image: url('');
}
#left {
	left: 135px;
	top: 180px;
	width: 45px;
	height: 100px;
	background-image: url('');
}
#right {
	right: 135px;
	top: 180px;
	width: 45px;
	height: 100px;
	background-image: url('');
}
*/
#menu {
	left: 180px;
	top: 325px;
	width: 115px;
	height: 63px;
	background-image: url('menu_button.png');
}
#gesture-area {
	left: 20px;
	top: 410px;
	width: 440px;
	height: 300px;
	background-image: url('');
}

